test/parser.d/invalid/indentation4.souc.bad
main() = do
	if "ok"
		print "bad indents"
		end if
	end main
